src/less/components/entries.less
.file, .directory {
  display: flex;
  flex-flow: row;
  align-items: center;

  padding: 1.4rem;

  width: 100%;
  .light-big;

  box-sizing: border-box;

  border-bottom: 1px solid @dark-separator;

  p {
    flex: 1 1;

    text-overflow: ellipsis;
  }

  > span {
    .thin-small;

    margin-left: 1rem;
  }

  i {
    margin-right: 1.4rem;
  }
}

.directory i {
  .icon-directory;
}

.file i {
  .icon-file;
}

